--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    <h1>My Portfolio</h1>
-</body>
+<!-- Created By CodingNepal -->
+<html lang="en" dir="ltr">
+   <head>
+      <meta charset="utf-8">
+      <title>Ashish</title>
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
+   <body>
+      <nav id="nav-menu">
+         <div class="logo">
+            Ashish
+         </div>
+         <input type="checkbox" id="click">
+         <label for="click" class="menu-btn">
+         <i class="fas fa-bars"></i>
+         </label>
+         <ul>
+            <li><a class="active nav-link home" href="#home" >Home</a></li>
+            <li><a href="#about"  class="about section nav-link about">About</a></li>
+            <li><a href="#skills"  class="nav-link skills">Skills</a></li>
+            <li><a href="#projects"  class="nav-link projects">Projects</a></li>
+            <li><a href="#contact"  class="nav-link contact">Contact</a></li>
+            <li><a href="#resume"  class="nav-link resume">Resume</a></li>
+         </ul>
+      </nav>
+      <div id="home">
+        home
+      </div>
+      <div id="about">
+        about
+      </div>
+      <div id="skills">
+        skills
+      </div>
+      <div id="projects">
+        projects
+      </div>
+      <div id="contact">
+        contacts
+      </div>
+      <div id="resume">
+        resume
+      </div>
+   </body>
 </html>
