--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <br>
     <!-- ==============home section ============-->
-    <div id="home">
+    <div id="home" class="home">
         <img src="./image/PhotoStudio_1666032723766.jpg" alt="home img">
         <h1>Hi, I'm Ashish</h1>
         <br>
@@ -44,6 +44,34 @@
     <!-- ==============about section ============-->
     <div id="about">
         <h1>About Me</h1>
+        <div >
+            <h1 id="user-detail-name">Ashish Kumar Palai</h1>
+            <br>
+            <p id="user-detail-intro">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies. 1200+ hours of practical experience building numerous websites and applications. Solved more than 500 data structure questions. Strongly interested in obtaining a backend developer position to create impactful and scalable products in Javascript and NodeJs. </p>
+
+        </div>
+        <div id="aboutdiv">
+            <div>
+                <p>1200+ hrs</p>
+                <p>Coding</p>
+            </div>
+            <div>
+                <p>700+ Que</p>
+                <p>DSA</p>
+            </div>
+            <div>
+                <p>100+ hrs</p>
+                <p>Soft Skills</p>
+            </div>
+            <div>
+                <p>500+</p>
+                <p>Git Commits</p>
+            </div>
+            <div>
+                <p>3+</p>
+                <p>Collaborative Projects</p>
+            </div>
+        </div>
     </div>
     <!-- ==============skills section ============-->
     <div id="skills">
@@ -59,15 +87,15 @@
         Loading the data just for you.
     </div>
     <p >
-        <div id="github-streak-stats" align=center>
+        <div  align=center>
           <a href="https://github.com/ashishkumarpalai/github-readme-streak-stats" title="Go to Source">
-            <img  width=390 src="https://github-readme-streak-stats.herokuapp.com/?user=ashishkumarpalai&theme=react&border=61dafb&hide_border=true" alt="ashishkumarpalai" />
+            <img  id="github-streak-stats" width=390 src="https://github-readme-streak-stats.herokuapp.com/?user=ashishkumarpalai&theme=react&border=61dafb&hide_border=true" alt="ashishkumarpalai" />
           </a>
-          <a id="github-top-langs" href="https://github.com/ashishkumarpalai/github-readme-stats">
-            <img width=390  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ashishkumarpalai&hide=c%23,powershell,Mathematica,Ruby,Objective-C,Objective-C%2b%2b,Cuda&title_color=61dafb&text_color=ffffff&icon_color=61dafb&bg_color=20232a&langs_count=8&layout=compact&border_color=61dafb&hide_border=true" />
+          <a  href="https://github.com/ashishkumarpalai/github-readme-stats">
+            <img id="github-top-langs" width=390  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ashishkumarpalai&hide=c%23,powershell,Mathematica,Ruby,Objective-C,Objective-C%2b%2b,Cuda&title_color=61dafb&text_color=ffffff&icon_color=61dafb&bg_color=20232a&langs_count=8&layout=compact&border_color=61dafb&hide_border=true" />
           </a>
-          <a id="github-stats-card" href="https://github.com/ashishkumarpalai/github-readme-stats" title="Go to Source">
-            <img  width=390 src="https://github-readme-stats.vercel.app/api?username=ashishkumarpalai&show_icons=true&theme=react&border_color=61dafb&hide_border=true" />
+          <a  href="https://github.com/ashishkumarpalai/github-readme-stats" title="Go to Source">
+            <img id="github-stats-card" width=390 src="https://github-readme-stats.vercel.app/api?username=ashishkumarpalai&show_icons=true&theme=react&border_color=61dafb&hide_border=true" />
           </a>
         </div>
         <br>
