--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
     <br>
     <!-- ==============home section ============-->
     <div id="home" class="home">
-        <img src="./image/PhotoStudio_1666032723766.jpg" alt="home img">
+        <img class="home-img" src="./image/PhotoStudio_1666032723766.jpg" alt="home img">
         <h1>Hi, I'm Ashish</h1>
         <br>
-        <h3>I'm Full Stack Developer</h3>
-        <h3>Always enthusiastic to learn and would love to work on new technologies.</h3>
+        <h2>I'm Full Stack Developer</h2>
+        <h2>Always enthusiastic to learn and would love to work on new technologies.</h2>
 
     </div>
     <!-- ==============about section ============-->
     <div id="about">
         <h1>About Me</h1>
-        <div >
+        <div class="about section" >
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
             <p id="user-detail-intro">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies. 1200+ hours of practical experience building numerous websites and applications. Solved more than 500 data structure questions. Strongly interested in obtaining a backend developer position to create impactful and scalable products in Javascript and NodeJs. </p>
@@ -75,7 +75,37 @@
     </div>
     <!-- ==============skills section ============-->
     <div id="skills">
-        skills
+        <h1 class="title-a">Skills</h1>
+        <div class="container">
+          <div class="skills-card">
+            <img src="./image/html.jpg" alt="Skill 1" class="skills-card-img">
+            <h5 class="skills-card-name">HTML</h5>
+          </div>
+          <div class="skills-card">
+            <img src="./image/css.jpg" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">CSS</h5>
+          </div>
+          <div class="skills-card">
+            <img src="./image/JavaScript.jpg" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">JavaScript</h5>
+          </div>
+          <div class="skills-card">
+            <img src="./image/nodejs.jpg" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">Node.js</h5>
+          </div>
+          <div class="skills-card">
+            <img src="./image/express.png" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">Express</h5>
+          </div>
+          <div class="skills-card">
+            <img src="./image/mongodb.jpg" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">MongoDB</h5>
+          </div>
+          <div  class="skills-card">
+            <img src="./image/git.jpg" alt="Skill 2" class="skills-card-img">
+            <h5 class="skills-card-name">Git</h5>
+          </div>
+        </div>
     </div>
     <!-- ==============projects section ============-->
     <div id="projects">
