--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     <!-- ==============about section ============-->
     <div id="about">
         <h1>About Me</h1>
-        <div class="about section" >
+        <div class="about section">
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies. 1200+ hours of practical experience building numerous websites and applications. Solved more than 500 data structure questions. Strongly interested in obtaining a backend developer position to create impactful and scalable products in Javascript and NodeJs. </p>
+            <p id="user-detail-intro">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies.
+                1200+ hours of practical experience building numerous websites and applications. Solved more than 500
+                data structure questions. Strongly interested in obtaining a backend developer position to create
+                impactful and scalable products in Javascript and NodeJs. </p>
 
         </div>
         <div id="aboutdiv">
@@ -76,62 +79,119 @@
     <!-- ==============skills section ============-->
     <div id="skills">
         <h1 class="title-a">Skills</h1>
+        <p class="text">Here is my skills to represent you my Expertise</p>
         <div class="container">
-          <div class="skills-card">
-            <img src="./image/html.jpg" alt="Skill 1" class="skills-card-img">
-            <h5 class="skills-card-name">HTML</h5>
-          </div>
-          <div class="skills-card">
-            <img src="./image/css.jpg" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">CSS</h5>
-          </div>
-          <div class="skills-card">
-            <img src="./image/JavaScript.jpg" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">JavaScript</h5>
-          </div>
-          <div class="skills-card">
-            <img src="./image/nodejs.jpg" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">Node.js</h5>
-          </div>
-          <div class="skills-card">
-            <img src="./image/express.png" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">Express</h5>
-          </div>
-          <div class="skills-card">
-            <img src="./image/mongodb.jpg" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">MongoDB</h5>
-          </div>
-          <div  class="skills-card">
-            <img src="./image/git.jpg" alt="Skill 2" class="skills-card-img">
-            <h5 class="skills-card-name">Git</h5>
-          </div>
+            <div class="skills-card">
+                <img src="./image/html.jpg" alt="Skill 1" class="skills-card-img">
+                <h5 class="skills-card-name">HTML</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/css.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">CSS</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/JavaScript.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">JavaScript</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/nodejs.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Node.js</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/express.png" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Express</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/mongodb.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">MongoDB</h5>
+            </div>
+            <div class="skills-card">
+                <img src="./image/git.jpg" alt="Skill 2" class="skills-card-img">
+                <h5 class="skills-card-name">Git</h5>
+            </div>
         </div>
     </div>
     <!-- ==============projects section ============-->
     <div id="projects">
-        projects
+        <h1>Projects</h1>
+        <p>Here is my projects to represent you my Experience</p>
+        <div id="projectsdiv">
+            <div class="project-card">
+                <img src="./image/quickbite.png" alt="">
+                <h2 class="project-title">Quick Bite</h2>
+                <p class="project-description">This website is a clone of "Chick-fil-A One" food ordering website </p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT</p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/ordinary-finger-7814">GitHub</a>
+                    <a class="project-deployed-link" href="https://thunderous-cat-0c0b57.netlify.app/">Deployed link</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="./image/nowopen.png" alt="">
+                <h2 class="project-title">Now Open</h2>
+                <p class="project-description">This website is a clone of "OverStock" E-commers website</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT </p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/oceanic-payment-211">GitHub</a>
+                    <a class="project-deployed-link" href="https://majestic-kataifi-9dbc29.netlify.app/">Deployed link</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="./image/marketzone.png" alt="">
+                <h2 class="project-title">Market Zone</h2>
+                <p class="project-description">This website is a clone of "OLX" E-commers website</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs </p>
+                <br>
+                <div class="project-link">
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689">GitHub</a>
+                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/">Deployed link</a>
+                </div>
+            </div>
+            <!-- <div class="project-card">
+                <img src="./image/PhotoStudio_1666032723766.jpg" alt="">
+                <h2 class="project-title">overstock</h2>
+                <p class="project-description">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                <p class="project-tech-stack">Tech Stack :- </p>
+                <div class="project-link">
+                    <a class="project-github-link" href="">GitHub</a>
+                    <a class="project-deployed-link" href="">Deployed link</a>
+                </div>
+            </div> -->
+        </div>
     </div>
     <!-- ======================================================calender=============================== -->
-    <div class="react-activity-calendar">
+    <div class="react-activity-calendar" id="calendercss">
         <!-- Loading stuff -->
         Loading the data just for you.
     </div>
-    <p >
-        <div  align=center>
-          <a href="https://github.com/ashishkumarpalai/github-readme-streak-stats" title="Go to Source">
-            <img  id="github-streak-stats" width=390 src="https://github-readme-streak-stats.herokuapp.com/?user=ashishkumarpalai&theme=react&border=61dafb&hide_border=true" alt="ashishkumarpalai" />
-          </a>
-          <a  href="https://github.com/ashishkumarpalai/github-readme-stats">
-            <img id="github-top-langs" width=390  src="https://github-readme-stats.vercel.app/api/top-langs/?username=ashishkumarpalai&hide=c%23,powershell,Mathematica,Ruby,Objective-C,Objective-C%2b%2b,Cuda&title_color=61dafb&text_color=ffffff&icon_color=61dafb&bg_color=20232a&langs_count=8&layout=compact&border_color=61dafb&hide_border=true" />
-          </a>
-          <a  href="https://github.com/ashishkumarpalai/github-readme-stats" title="Go to Source">
-            <img id="github-stats-card" width=390 src="https://github-readme-stats.vercel.app/api?username=ashishkumarpalai&show_icons=true&theme=react&border_color=61dafb&hide_border=true" />
-          </a>
-        </div>
-        <br>
-        
-        <img  src="https://github-readme-activity-graph.cyclic.app/graph?username=ashishkumarpalai&theme=react-dark&bg_color=20232a&hide_border=true" width="100%"/>
-      </p>
+    <p>
+    <div align=center id="graph1">
+        <a href="https://github.com/ashishkumarpalai/github-readme-streak-stats" title="Go to Source">
+            <img id="github-streak-stats" width=390
+                src="https://github-readme-streak-stats.herokuapp.com/?user=ashishkumarpalai&theme=react&border=61dafb&hide_border=true"
+                alt="ashishkumarpalai" />
+        </a>
+        <a href="https://github.com/ashishkumarpalai/github-readme-stats">
+            <img id="github-top-langs" width=390
+                src="https://github-readme-stats.vercel.app/api/top-langs/?username=ashishkumarpalai&hide=c%23,powershell,Mathematica,Ruby,Objective-C,Objective-C%2b%2b,Cuda&title_color=61dafb&text_color=ffffff&icon_color=61dafb&bg_color=20232a&langs_count=8&layout=compact&border_color=61dafb&hide_border=true" />
+        </a>
+        <a href="https://github.com/ashishkumarpalai/github-readme-stats" title="Go to Source">
+            <img id="github-stats-card" width=390
+                src="https://github-readme-stats.vercel.app/api?username=ashishkumarpalai&show_icons=true&theme=react&border_color=61dafb&hide_border=true" />
+        </a>
+    </div>
+    <br>
+
+    <div id="graph">
+        <img src="https://github-readme-activity-graph.cyclic.app/graph?username=ashishkumarpalai&theme=react-dark&bg_color=20232a&hide_border=true"
+        width="100%" />
+    </div>
+    </p>
     <!-- ==============contact section ============-->
     <div id="contact">
         contacts
@@ -141,6 +201,7 @@
         resume
     </div>
 </body>
+
 </html>
 
 
