--- a/index.html
+++ b/index.html
@@ -152,21 +152,25 @@
                     <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/">Deployed link</a>
                 </div>
             </div>
-            <!-- <div class="project-card">
-                <img src="./image/PhotoStudio_1666032723766.jpg" alt="">
-                <h2 class="project-title">overstock</h2>
-                <p class="project-description">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-                <p class="project-tech-stack">Tech Stack :- </p>
+            <div class="project-card">
+                <img src="./image/marketzone.png" alt="">
+                <h2 class="project-title">Market Zone</h2>
+                <p class="project-description">This website is a clone of "OLX" E-commers website</p>
+                <br>
+                <p class="project-tech-stack">Tech Stack :-HTML | CSS | JAVASCRIPT | Express | MongoDB Atlas | NodeJs </p>
+                <br>
                 <div class="project-link">
-                    <a class="project-github-link" href="">GitHub</a>
-                    <a class="project-deployed-link" href="">Deployed link</a>
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689">GitHub</a>
+                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/">Deployed link</a>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     <!-- ======================================================calender=============================== -->
+    <h1 id="gitstatus">Git Status</h1>
     <div class="react-activity-calendar" id="calendercss">
         <!-- Loading stuff -->
+        
         Loading the data just for you.
     </div>
     <p>
