--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ashish</title>
+    
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,12 +44,12 @@
 
     </div>
     <!-- ==============about section ============-->
-    <div id="about">
+    <div id="about" >
         <h1>About Me</h1>
-        <div class="about section">
+        <div >
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies.
+            <p id="user-detail-intro" class="about section">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies.
                 1200+ hours of practical experience building numerous websites and applications. Solved more than 500
                 data structure questions. Strongly interested in obtaining a backend developer position to create
                 impactful and scalable products in Javascript and NodeJs. </p>
@@ -272,7 +273,8 @@
 
     <!-- ==============resume section ============-->
     <div id="resume">
-        resume
+        <h1>Resume<i class="fa-solid fa-magnifying-glass"></i>
+        </div></h1>
     </div>
 </body>
 
