--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Ashish</title>
-    
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,8 @@
             <li><a href="#skills" class="nav-link skills">Skills</a></li>
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
-            <li><a href="#resume" class="nav-link resume">Resume</a></li>
+            <!-- <li></li> -->
+            <button id="resume-button-1"><a href="" class="nav-link resume" id="resume-link-1"> </a>Resume</button>
         </ul>
     </nav>
     <br>
@@ -44,16 +45,17 @@
 
     </div>
     <!-- ==============about section ============-->
-    <div id="about" >
+    <div id="about">
         <h1>About Me</h1>
-        <div >
+        <div class="about section">
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro" class="about section">Aspiring Full Stack Developer enthusiastic to learn and explore new technologies.
+            <p id="user-detail-intro" class="about section">Aspiring Full Stack Developer enthusiastic to learn and
+                explore new technologies.
                 1200+ hours of practical experience building numerous websites and applications. Solved more than 500
                 data structure questions. Strongly interested in obtaining a backend developer position to create
-                impactful and scalable products in Javascript and NodeJs. </p>
-
+                impactful and scalable products in Javascript and NodeJs.</p>
+                <button id="resume-button-2"><a href="" class="nav-link resume" id="resume-link-2"> </a>Resume</button>
         </div>
         <div id="aboutdiv">
             <div>
@@ -212,15 +214,17 @@
         <h1>Contact me&nbsp;<i class="fa-solid fa-address-book"></i></h1>
         <div class="contact-body">
             <div id="contact-img">
-                <img alt="contact" src="./image/PhotoStudio_1666032723766.jpg"/>
+                <img alt="contact" src="./image/PhotoStudio_1666032723766.jpg" />
             </div>
             <div class="contact-text">
                 <h2>Get in Touch</h2>
                 <div>
                     <a id="contact-email"><i class="fa-solid fa-envelope"></i>ashishkumarpalai2000@gmail.com</a>
                     <a id="contact-phone"><i class="fa-solid fa-phone"></i> +91 8917299117</a>
-                    <a target="_blank" href="https://github.com/ashishkumarpalai" id="contact-github"><i class="fa-brands fa-github"></i>ashishkumarpalai</a>
-                    <a target="_blank" href="https://www.linkedin.com/in/ashishkumarpalai/" id="contact-linkedin"><i class="fa-brands fa-linkedin"></i>ashishkumarpalai</a>
+                    <a target="_blank" href="https://github.com/ashishkumarpalai" id="contact-github"><i
+                            class="fa-brands fa-github"></i>ashishkumarpalai</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/ashishkumarpalai/" id="contact-linkedin"><i
+                            class="fa-brands fa-linkedin"></i>ashishkumarpalai</a>
                 </div>
             </div>
         </div>
@@ -245,7 +249,7 @@
                     <i class="fa-brands fa-github"></i>
                     <div class="topic">github</div>
                     <!-- <a id="contact-github" class="text-one">codinglab@gmail.com</a> -->
-                    <!-- <a id="contact-github" class="text-one" href="https://github.com/Milan677">My Github</a>
+    <!-- <a id="contact-github" class="text-one" href="https://github.com/Milan677">My Github</a>
                 </div>
             </div>
             <div class="crightside">
@@ -274,7 +278,8 @@
     <!-- ==============resume section ============-->
     <div id="resume">
         <h1>Resume<i class="fa-solid fa-magnifying-glass"></i>
-        </div></h1>
+    </div>
+    </h1>
     </div>
 </body>
 
