--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#projects" class="nav-link projects">Projects</a></li>
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <!-- <li></li> -->
-            <button id="resume-button-1"><a href="" class="nav-link resume" id="resume-link-1"> </a>Resume</button>
+            <button id="resume-button-1 "><a href="image/Ashish-kumar-palai-Resume.pdf" download target="_blank" class="nav-link resume" id="resume-link-1"> Resume</a></button>
         </ul>
     </nav>
     <br>
@@ -55,7 +55,7 @@
                 1200+ hours of practical experience building numerous websites and applications. Solved more than 500
                 data structure questions. Strongly interested in obtaining a backend developer position to create
                 impactful and scalable products in Javascript and NodeJs.</p>
-                <button id="resume-button-2"><a href="" class="nav-link resume" id="resume-link-2"> </a>Resume</button>
+                <button id="resume-button-2"><a href="image/Ashish-kumar-palai-Resume.pdf" download target="_blank" class="nav-link resume" id="resume-link-2"> Resume</a></button>
         </div>
         <div id="aboutdiv">
             <div>
@@ -291,4 +291,10 @@
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai");
     // or enable responsive functionality
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai", { responsive: true });
+</script>
+<script>
+    let resumeBtn=document.querySelector("#resume-link-2")
+    resumeBtn.addEventListener("click",()=>{
+        window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
+    })
 </script>
