--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <div class="about section">
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro" class="about section">Aspiring Full Stack Developer enthusiastic to learn and
-                explore new technologies.
+            <p id="user-detail-intro" class="about section">A passionate JavaScript & NODE JS Back-End Developer, Dedicated to developing robust
+                applications that interact with the
+                Backend part of web applications.
                 1200+ hours of practical experience building numerous websites and applications. Solved more than 500
                 data structure questions. Strongly interested in obtaining a backend developer position to create
                 impactful and scalable products in Javascript and NodeJs.</p>
