--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <div class="about section">
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro" class="about section">A passionate JavaScript & NODE JS Back-End Developer, Dedicated to developing robust
+            <p id="user-detail-intro" >A passionate JavaScript & NODE JS Back-End Developer,
+                Dedicated to developing robust
                 applications that interact with the
                 Backend part of web applications.
                 1200+ hours of practical experience building numerous websites and applications. Solved more than 500
