--- a/index.html
+++ b/index.html
@@ -215,10 +215,16 @@
     </p>
     <!-- ===========================contact section ============-->
     <div id="contact">
-        <h1>Contact me&nbsp;</h1>
+        <h1>Contact me</h1>
         <div class="contact-body">
             <div id="contact-img">
-                <img alt="contact" src="./image/PhotoStudio_1666032723766.jpg" />
+                <h2>Send us a message</h2>
+                <form action="">
+                    <input type="text" placeholder="Enter your name">
+                    <input type="email" placeholder="Enter your email">
+                    <input type="text" placeholder="Enter your message">
+                </form>
+                <button>Send Now</button>
             </div>
             <div class="contact-text">
                 <h2>Get in Touch</h2>
@@ -302,3 +308,4 @@
         window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
     })
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
