--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ashish</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- calender -->
@@ -239,58 +240,7 @@
             </div>
         </div>
     </div>
-    <!-- <div id="contact">
-        <div id="ccontant">
-            <h1>Contact me</h1>
-            <p>Get In Touch With Me</p>
-        </div>
-        <div id="cdcontact">
-            <div id="cleftside">
-                <div id="contact-github">
-                    <a href="https://github.com/ashishkumarpalai">Github</a>
-                </div>
-                <div id="contact-linkedin">
-                    <a href="https://www.linkedin.com/in/ashishkumarpalai/">Linkedin</a>
-                </div>
-                <div id="contact-phone">
-
-                </div>
-                <div id="contact-email">
-                    <i class="fa-brands fa-github"></i>
-                    <div class="topic">github</div>
-                    <!-- <a id="contact-github" class="text-one">codinglab@gmail.com</a> -->
-    <!-- <a id="contact-github" class="text-one" href="https://github.com/Milan677">My Github</a>
-                </div>
-            </div>
-            <div class="crightside">
-                <div class="topic-text">Send us a message</div>
-                <p>If you have any work from me or any types of quries related to my tutorial, you can send me message
-                    from
-                    here. It's my pleasure to help you.</p>
-                <form action="#">
-                    <div class="input-box">
-                        <input type="text" placeholder="Enter your name">
-                    </div>
-                    <div class="input-box">
-                        <input type="text" placeholder="Enter your email">
-                    </div>
-                    <div class="input-box message-box">
-                        <input type="text" placeholder="Enter your message">
-                    </div>
-                    <div class="button">
-                        <input type="button" value="Send Now">
-                    </div>
-                </form>
-            </div>
-        </div> -->
-    </div> -->
-
-    <!-- ==============resume section ============-->
-    <!-- <div id="resume">
-        <h1>Resume<i class="fa-solid fa-magnifying-glass"></i>
-    </div>
-    </h1>
-    </div> -->
+   
 </body>
 
 </html>
