--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <li><a href="#contact" class="nav-link contact">Contact</a></li>
             <!-- <li></li> -->
             <li><button id="resume-button-1"><a href="image/Ashish-kumar-palai-Resume.pdf" download target="_blank"
-                        class="nav-link resume" id="resume-link-1"> Resume</a></button></li>
+                        class="nav-link resume wopen" id="resume-link-1"> Resume</a></button></li>
         </ul>
     </nav>
     <br>
     <!-- ==============home section ============-->
     <div id="home" class="home">
-        <img class="home-img" src="./image/PhotoStudio_1666032723766.jpg" alt="home img">
+        <img class="home-img" style="object-fit: cover;" src="./image/ashishkumarpalai.png" alt="home img">
         <h1>Hi, I'm Ashish</h1>
         <br>
         <h2>I'm Full Stack Developer</h2>
@@ -52,7 +52,7 @@
         <div class="about section">
             <h1 id="user-detail-name">Ashish Kumar Palai</h1>
             <br>
-            <p id="user-detail-intro" >A passionate JavaScript & NODE JS Back-End Developer,
+            <p id="user-detail-intro">A passionate JavaScript & NODE JS Back-End Developer,
                 Dedicated to developing robust
                 applications that interact with the
                 Backend part of web applications.
@@ -133,9 +133,10 @@
                 <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT</p>
                 <br>
                 <div class="project-link">
-                    <a class="project-github-link"
-                        href="https://github.com/ashishkumarpalai/ordinary-finger-7814">GitHub</a>
-                    <a class="project-deployed-link" href="https://thunderous-cat-0c0b57.netlify.app/">Deployed link</a>
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/ordinary-finger-7814"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://thunderous-cat-0c0b57.netlify.app/"
+                        target="_blank">Deployed link</a>
                 </div>
             </div>
             <div class="project-card">
@@ -146,9 +147,10 @@
                 <p class="project-tech-stack">Tech Stack :- HTML | CSS | JAVASCRIPT </p>
                 <br>
                 <div class="project-link">
-                    <a class="project-github-link"
-                        href="https://github.com/ashishkumarpalai/oceanic-payment-211">GitHub</a>
-                    <a class="project-deployed-link" href="https://majestic-kataifi-9dbc29.netlify.app/">Deployed
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/oceanic-payment-211"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://majestic-kataifi-9dbc29.netlify.app/"
+                        target="_blank">Deployed
                         link</a>
                 </div>
             </div>
@@ -161,9 +163,10 @@
                 </p>
                 <br>
                 <div class="project-link">
-                    <a class="project-github-link"
-                        href="https://github.com/ashishkumarpalai/bewildered-committee-2689">GitHub</a>
-                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/">Deployed
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/"
+                        target="_blank">Deployed
                         link</a>
                 </div>
             </div>
@@ -176,9 +179,10 @@
                 </p>
                 <br>
                 <div class="project-link">
-                    <a class="project-github-link"
-                        href="https://github.com/ashishkumarpalai/bewildered-committee-2689">GitHub</a>
-                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/">Deployed
+                    <a class="project-github-link" href="https://github.com/ashishkumarpalai/bewildered-committee-2689"
+                        target="_blank">GitHub</a>
+                    <a class="project-deployed-link" href="https://enchanting-praline-ce2844.netlify.app/"
+                        target="_blank">Deployed
                         link</a>
                 </div>
             </div>
@@ -240,7 +244,7 @@
             </div>
         </div>
     </div>
-   
+
 </body>
 
 </html>
@@ -257,5 +261,13 @@
     resumeBtn.addEventListener("click", () => {
         window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
     })
+
+    let resumeBtn2 = document.querySelector("#resume-link-1")
+    resumeBtn2.addEventListener("click", () => {
+        window.open("https://drive.google.com/file/d/17ApDObPiuqxZgTDDTFo9PAfFKLnzbFxe/view?usp=share_link")
+    })
+
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"
+    integrity="sha512-fD9DI5bZwQxOi7MhYWnnNPlvXdp/2Pj3XSTRrFs5FQa4mizyGLnJcN6tuvUS6LbmgN1ut+XGSABKvjN0H6Aoow=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
