--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 <!-- =====================================================calender -->
 <script>
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai");
-    // or enable responsive functionality
+    // or enable responsive functionality ok
     GitHubCalendar(".react-activity-calendar", "ashishkumarpalai", { responsive: true });
 </script>
 <script>
